--- a/50_html/01_구조.html
+++ b/50_html/01_구조.html
@@ -13,3 +13,16 @@
         <!-- 문서 제목 -->
     <!-- 문서 내용: 웹 브라우저에 표시할 내용 -->
 <!-- 문서의 끝 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>시작하기</title>
+</head>
+<body>
+     html 시작하기
+</body>
+</html>
