--- a/50_html/01_구조.html
+++ b/50_html/01_구조.html
@@ -1,28 +1,31 @@
 <!-- 주석: ctrl+/ 또는 shift+alt+a -->
-<!-- 정렬(들여쓰기): shift+alt+f -->
 <!-- 주석: 댓글, 코드 숨김(에러 파악) -->
+<!-- 선택한 영역의 위치를 위/아래로 이동: alt+윗/아랫방향키 -->
+<!-- 정렬(들여쓰기): shift+alt+f -->
+<!-- 취소: ctrl+z -->
 
 <!-- 문서 타입 선언: 현재 문서가 HTML5 버전으로 작성 -->
+<!DOCTYPE html>
 <!-- 문서의 시작, 문서의 언어 설정 -->
 <!-- 언어 코드: ko(한국어), en(영어), ja(일본어), zh(중국어) -->
 <!-- https://www.w3schools.com/tags/ref_language_codes.asp -->
-    <!-- 문서 정보 -->
-        <!-- 인코딩 방식 -->
-        <!-- IE 브라우저의 최신 버전의 엔진을 사용 -->
-        <!-- 뷰포트 설정: 모든 기기에서 잘 보이도록 표시 영역 설정 -->
-        <!-- 문서 제목 -->
-    <!-- 문서 내용: 웹 브라우저에 표시할 내용 -->
-<!-- 문서의 끝 -->
-
-<!DOCTYPE html>
 <html lang="en">
+<!-- 문서 정보 -->
 <head>
+    <!-- 인코딩 방식 -->
     <meta charset="UTF-8">
+    <!-- IE 브라우저의 최신 버전의 엔진을 사용 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- 뷰포트 설정: 모든 기기에서 잘 보이도록 표시 영역 설정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 문서 제목 -->
     <title>시작하기</title>
 </head>
+
 <body>
-     html 시작하기
+    <!-- 문서 내용: 웹 브라우저에 표시할 내용 -->
+    HTML 1번 시작하기
 </body>
+<!-- 문서의 끝 -->
+
 </html>
