--- a/50_html/03_제목.html
+++ b/50_html/03_제목.html
@@ -1,14 +1,42 @@
+<!-- 
+    1.HTML: 내용
+    2.CSS: 디자인
+    3.JavaScript: 동적 움직임
+ -->
+ 
+<!-- 
+    태그(tag)
+    <시작태그>
+    </끝태그>
+
+    HTML 요소:
+    <시작태그 속성="값" 속성="값" ...>내용</끝태그>
+    <시작태그 속성="값" 속성="값" ...>
+    <title>HTML</title>
+
+    body 사이의 모든 태그에 사용 가능한 속성(글로벌 속성) : class, id, title
+
+    내용: 텍스트, 태그(img, video, audio)
+ -->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<!-- html문서의 언어를 한국어로 작성한다. -->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>제목</title>
 </head>
 <body>
     <!-- 선택한 영역 복제: shift+alt+위/아래방향키 -->
     <!-- 페이지에서 h1은 상단에 1번만 사용한다. -->
-
+    <h1 title="설명글(이미지,링크)">큰제목, 로고</h1>
+    <h2>중간제목</h2>
+    <h3>작은제목</h3>
+    <h4>더작은제목</h4>
+    <h5>더더작은제목</h5>
+    <h6>더욱더작은제목</h6>
 </body>
 </html>
