--- a/50_html/04_단락.html
+++ b/50_html/04_단락.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- 단락(paragraph)? 하나 이상의 문장이 모여서 단락(문단)을 구성한다. -->
+    <p>이에 따라 올해 EV6를 시작으로 매년 1종 이상의 전기차 모델이 중국에서 출시된다. 올해 말에는 중국에서 생산되는 최초의 준중형 전기 SUV인 EV5를 출시하고, 내년에는 대형 전기 SUV EV9을 선보인다. 2025년 엔트리급 SUV, 2026년 프리미엄 세단, 2027년 중형 SUV 등 전동화 모델을 순차적으로 출시해 총 6종의 라인업을 구축할 예정이다.</p>
     <!-- 한 칸이상의 공백을 한 칸으로 인식한다. -->
 
     <!-- 콘텐츠 분리, 수평선 -->
