--- a/50_html/01_구조.html
+++ b/50_html/01_구조.html
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서 제목 -->
     <title>시작하기</title>
+    <title>시작하기</title>
 </head>
 
 <body>
