--- a/50_html/05_서식.html
+++ b/50_html/05_서식.html
@@ -10,10 +10,23 @@
 
 <body>
     <h1>서식</h1>
+
+    <!-- 
+        <b>: 굵게
+        <strong>: 중요한 텍스트
+        <em>: 강조할 텍스트(스크린리더 읽힘)
+        <i>: 이텔틱
+        <mark>: 형광펜 효과
+        <small>: 작은 텍스트
+        <sub>: 아랫첨자
+        <sup>: 윗첨자
+        <ins>: 삽입할 텍스트
+        <del>: 삭제할 텍스트
+     -->
     <p>b, strong, em, i, mark, small, sub, sup, ins, del이 있다.</p>
 
     <!-- shift+alt+f: 정렬(들여쓰기) -->
-    <h2>레드향</h2>
+    <h2>껍질에 붉은 빛이 나는 <i>레드향</i></h2>
     <p>껍질에 붉은 빛이 돌아 <b>레드향</b>이라 불린다. 레드향은 <em>한라봉과 귤을 교배</em>한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고 통통하다. <i>비타민 C</i>와 <i>비타민 P</i>가 풍부해 <strong>혈액순환, 감기예방</strong> 등에 좋은 것으로 알려져 있다.</p>
 
     <p>오늘은 꼭 <mark>우유</mark>를 사오세요.</p>
