--- a/50_html/14_블록과인라인.html
+++ b/50_html/14_블록과인라인.html
@@ -7,6 +7,13 @@
     <title>HTML</title>
 </head>
 <body>
+
+    <!-- 
+        HTML 요소
+        1. 블록레벨요소: h1~h6, p, hr, div
+        2. 인라인요소: b, strong, em, i, mark, small, sub, sup, ins, del, br, span
+     -->
+
     <h1>블록과 인라인</h1>
 
     <h2>블록 레벨 요소</h2>
