--- a/50_html/08_목록.html
+++ b/50_html/08_목록.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML</title>
     </head>
     <body>
         <h1>목록 만들기</h1>
+        
         <!-- ul과 ol의 자식은 li만 사용할 수 있다. -->
         <!-- li의 자식으로 li는 사용할 수 없다. -->
 
@@ -25,22 +26,34 @@
             우유
             차
          -->
+         <ul>
+            <li>아메리카노</li>
+            <li>카페모카</li>
+            <li>카페모카</li>
+            <li>우유</li>
+            <li>카페라떼</li>
+         </ul>
 
 
         <h2>레드향 샐러드 레시피</h2>
         <!-- 순서가 있는 목록을 만드시오. -->
-        샐러드 채소를 씻고 물기를 제거한 후 준비합니다.
-        레드향과 아보카도, 토마토를 먹기 좋은 크기를 썰어둡니다.
-        드레싱 재료를 믹서에 갈아줍니다.
-        볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 끝!
+        <!-- 다중 커서 만들기: alt+클릭 -->
+        <ol>
+            <li>샐러드 채소를 씻고 물기를 제거한 후 준비합니다.</li>
+            <li>레드향과 아보카도, 토마토를 먹기 좋은 크기를 썰어둡니다.</li>
+            <li>드레싱 재료를 믹서에 갈아줍니다.</li>
+            <li>볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 끝!</li>
+        </ol>
 
         <h2>정의 목록</h2>
         <!-- 정의 목록을 만들어 보세요. -->
         <!-- 용어는 HTML과 CSS이고, 용어 설명은 아래와 같다. -->
-        HTML
-        HyperText Markup Language로 웹 브라우저에 표시되도록 설계된 문서의 표준 마크업 언어입니다.
-        CSS
-        종속형 시트 또는 캐스케이딩 스타일 시트는 마크업 언어가 실제 표시되는 방법을 기술하는 스타일 언어로 W3C의 표준이고, 레이아웃과 스타일을 정의할 때의 자유도가 높다.
+        <dl>
+            <dt>HTML</dt>
+            <dd>HyperText Markup Language로 웹 브라우저에 표시되도록 설계된 문서의 표준 마크업 언어입니다.</dd>
+            <dt>CSS</dt>
+            <dd>종속형 시트 또는 Cascading Style Sheets는 마크업 언어가 실제 표시되는 방법을 기술하는 스타일 언어로 W3C의 표준이고, 레이아웃과 스타일을 정의할 때의 자유도가 높다.</dd>
+        </dl>
 
         <hr>
         <h2>응용</h2>
@@ -51,6 +64,20 @@
 
         <!-- 참조: https://cwd7.netlify.app/justshopping/index.html -->
         <!-- ul>li*4 -->
+
+        <ul>
+            <li>탑
+                <ul>
+                    <li>블라우스</li>
+                    <li>티</li>
+                    <li>셔츠</li>
+                    <li>니츠</li>
+                </ul>
+            </li>
+            <li>아우터</li>
+            <li>팬츠</li>
+            <li>악세서리</li>
+        </ul>
 
 
     </body>
