--- a/50_html/08_목록.html
+++ b/50_html/08_목록.html
@@ -8,6 +8,34 @@
     </head>
     <body>
         <h1>목록 만들기</h1>
+
+        <!-- 
+            목록(list)
+            1. 순서없는 목록: <ul>, <li> -> 내비게이션
+            2. 순서있는 목록: <ol>, <li>
+            3. 정의 목록: <dl>, <dt>, <dd>
+
+            형식:
+            <ul>
+                텍스트 -> x
+                <h2>제목</h2> -> x
+                <p>단락이다.</p> -> x
+                <li><li>내용</li></li> -> x
+                <li><ul><li>내용</li></ul></li> -> (o)
+                <li>내용</li>
+            </ul>
+            <ol>
+                <li>내용</li>
+                <li>내용</li>
+                <li>내용</li>
+            </ol>
+
+            <dl>
+                <dt>단어</dt>
+                <dd>설명글</dd>
+            </dl>
+
+         -->
         
         <!-- ul과 ol의 자식은 li만 사용할 수 있다. -->
         <!-- li의 자식으로 li는 사용할 수 없다. -->
