--- a/50_html/11-1_폼.html
+++ b/50_html/11-1_폼.html
@@ -17,10 +17,12 @@
     <input type="password" name="user_pw" id="user_pw" required>
 
     <!-- 검색 상자 -->
+    <!-- value는 초기값 -->
     <input type="search" name="query" value="토끼 캐릭터">
 
     <!-- 전화 번호 입력 상자 -->
     <label for="user_tel">연락처:</label>
+    <!-- placeholder은 힌트를 준다. -->
     <input type="tel" name="user_tel" id="user_tel" placeholder="전화번호를 쓰세요." required>
 
     <!-- 이메일 입력 상자 -->
