--- a/50_html/09-1_이미지.html
+++ b/50_html/09-1_이미지.html
@@ -10,6 +10,24 @@
 
 <body>
     <h1>이미지</h1>
+
+    <!-- 
+
+        //그룹핑 및 캡션
+        <img>: 이미지 연결
+        <fiqure>: 멀티미디어 그룹핑
+        <figcaption>:캡션
+
+        //이미지맵 - 하나의 이미지에 여러 링크
+        <img src="" alt="" usemap="#aaa">
+        <map name="aaa">: 맵
+        <area shape="모양" coords="좌표" alt="">:  영역
+        모양: rect, circle, poly
+        좌표: 1)rect: x1, y1, x2, y2
+              2)circle: x1, y1, R
+              3)poly: x1,y1,x2,y2,x3,y3...
+     -->
+
     <!-- 
         사용 이미지
         1. 이탈리아 풀리아주의 건축물인 트룰리: assets/pic_trulli.jpg
@@ -19,6 +37,10 @@
     -->
     <h2>캡션 달기</h2>
     <!-- figure와 figcaption을 사용하여 이미지에 캡션을 달아 보세요. -->
+    <figure>
+        <img src="assets/pic_trulli.jpg" alt="trulli">
+        <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+    </figure>
 
     <hr>
     <h2>이미지 맵</h2>
@@ -36,9 +58,12 @@
      -->
     <p>컴퓨터, 핸드폰, 커피 잔을 클릭하여 새 페이지로 이동하고 주제에 대해 자세히 읽어보십시오.</p>
 
-    <img src="" alt="" usemap="">
-    <map name="">
-        <area shape="" coords="" alt="" href="" target="">
+    <img src="../workplace.jpg" usemap="#image-map" alt="직장">
+    <map name="image-map">
+        <!-- target, title은 생략가능 -->
+        <area target="_blank" alt="핸드폰" title="클릭하면 구글 사이트로 이동됩니다." href="https://google.com" coords="290,172,335,251" shape="rect">
+        <area target="_blank" alt="커피잔" title="클릭하면 네이버로 이동됩니다." href="https://naver.com" coords="337,300,45" shape="circle">
+        <area target="_blank" alt="노트북" title="클릭하면 교육사이트로 이동됩니다." href="http://wp90.rf.gd" coords="35,40,273,41,265,187,274,346,32,344,46,186" shape="poly">
     </map>
 
 </body>
