--- a/50_html/11-1_폼.html
+++ b/50_html/11-1_폼.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <h1>폼</h1>
+
+    <!-- 
+        폼(양식)
+        <input type="text">
+        text, password, search, email, tel, url 
+        submit(전송), reset(초기화), button(버튼), image, file
+        checkbox(다중 선택), radio(여러 개 중 1개 선택)
+        number, range
+        color
+        date, datetime-local, month, week, time
+
+        <button type="">
+        submit(전송), reset(초기화), button(버튼)   
+
+     -->
+
     <!-- 텍스트 입력 상자 -->
     <label for="user_id">아이디:</label>
     <input type="text" name="user_id" id="user_id" required>
