--- a/50_html/11_폼.html
+++ b/50_html/11_폼.html
@@ -16,16 +16,17 @@
         <form>: 폼의 요소를 담기 위한 컨테이너
         <fieldset>: 폼의 그룹핑
         <legend>: fieldset의 캡션
-        <input type="">: 한 줄 입력 폼
+
+        <input type="text" id="aaa">: 한 줄 텍스트 입력 
             type: text, password, search, tel, email, url
             type: submit, reset, button, image, file
             type: checkbox, radio
-        <label>: 레이블
+        <label for="aaa">: 레이블
         <button type="">: 버튼
             type: submit, reset, button
-        <textarea>: 여러 줄 입력
+        <textarea>: 여러 줄의 텍스트 입력
         <select>: 선택 목록
-            <option>: 목록의 항목
+            <option value="서버에 전송되는 값">: 목록의 항목
             <optgroup>: 목록의 항목을 그룹핑
         <datalist>: 선택 목록 + 입력
      -->
