--- a/50_html/12_미디어.html
+++ b/50_html/12_미디어.html
@@ -9,8 +9,17 @@
 </head>
 
 <body>
+    <!-- 파일/폴더 이름에 공백 사용하지 말 것!! -->
     <h1>미디어</h1>
-    <!-- 파일 이름에 공백 사용하지 말 것!! -->
+
+    <!-- 
+        <video>: 비디오
+        <audio>: 오디오
+        <source>: 소스
+
+        <iframe>: 외부 비디오/오디오 
+     -->
+
     <h2>비디오</h2>
     <!-- 
         비디오 소스: 
@@ -33,13 +42,19 @@
      -->
 
     <!-- video와 source 태그로 비디오를 삽입해 보세요. -->
-    <video>
-        Your browser does not support HTML video.
+    <!-- autoplay와 muted를 함께 지정해야 한다. -->
+    <video controls>
+        <!-- 지원 검색 : https://caniuse.com/?search=video -->
+        <source src="assets/video/mov_bbb.mp4" type="video/mp4">
+        <source src="assets/video/mov_bbb.webm" type="video/webm">
+        <source src="assets/video/mov_bbb.ogv" type="video/ogg">
+        당신의 브라우저는 HTML 비디오를 지원하지 않는다.        
     </video>
 
 
     <h2>유튜브 비디오</h2>
     <!-- 유튜브 비디오를 iframe 태그로 삽입해 보세요. -->
+    <iframe src="https://www.youtube.com/embed/YE7VzlLtp-4"></iframe>
 
 
     <!-- 
@@ -61,12 +76,16 @@
 
     <h2>오디오</h2>
      <!-- 1번 오디오 소스를 이용하여 audio와 source 태그로 오디오를 삽입해 보세요. -->
-    <audio>
+    <audio controls>
+        <source src="assets/audio/horse.mp3" type="audio/mpeg">
+        <source src="assets/audio/horse.ogv" type="audio/ogg">
+        <source src="assets/audio/horse.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
 
     <!-- 2번 오디오 소스를 이용하여 배경 음악을 삽입해 보세요. -->
-    <audio autoplay>
+    <audio autoplay loop>
+        <source src="assets/audio/Good_Morning!_Reed_Mathis.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
