--- a/50_html/13-1_테이블.html
+++ b/50_html/13-1_테이블.html
@@ -11,7 +11,24 @@
     <h1>표</h1>
     <h2>표의 모든 태그 사용</h2>
 
-    <!-- 아래 내용을 숙지한 후 지우고 다시 만들어 보세요. -->
+    <!-- 
+        필수태그
+        <table>: 표
+        <tr>: 행
+        <td colspan="" rowspan="">: 셀 데이터
+        <th scope="row 또는 col" colspan="" rowspan="">: 셀 제목
+
+        선택태그
+        <caption>: 표의 제목
+        <col span="">: 열
+        <colgroup>: 열 그룹
+        <thead>: 머리글
+        <tbody>: 본문
+        <tfoot>: 바닥글
+        
+     -->
+
+    <!-- 아래 내용을 숙지한 후 지우고 다시 만들어 보세요. 
     <table id="table1">
         <caption>표의 제목</caption>
         <colgroup>
@@ -44,6 +61,40 @@
                 <td>95점</td>
             </tr>
         </tfoot>
+    </table>-->
+
+    <!-- 아래 내용을 숙지한 후 지우고 다시 만들어 보세요. -->
+    <table id="table1">
+        <caption>ㅇㅇ커피 공지사항</caption>
+        <colgroup>
+            <col>
+            <col>
+            <col>
+        </colgroup>
+        <thead>
+            <tr>
+                <th scope="col">번호</th>
+                <th scope="col">제목</th>
+                <th scope="col">조회</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>공지</td>
+                <td>ㅇㅇ커피 원두 관련 공지</td>
+                <td>3000</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>탄소 중립 실천 포인트제 도입 안내</td>
+                <td>1543</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>ㅇㅇ커피 영양성분표</td>
+                <td>1354</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
