--- a/50_html/15_시맨틱.html
+++ b/50_html/15_시맨틱.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     <h1>시맨틱 태그</h1>
+
+    <!-- 
+        요소 그룹핑이 공통점
+
+        <div>: 블록레벨요소를 그룹핑 
+        <span>: 인라인요소를 그룹핑
+
+        HTML5 시맨틱(의미있는) 태그
+        <header>: 헤더 - 로고, 네비게이션
+        <nav>: 네비게이션
+        <section>: 콘텐츠
+        <article>: 독립된 콘텐츠
+        <aside>: 기타 콘텐츠
+        <main>: 메인 콘텐츠
+        <footer>: 푸터 - 하단로고, 하단메뉴, 주소 및 저작권, sns, 패밀리 사이트 ...
+
+     -->
+
     <header>
         <!-- header 안에 header, footer은 사용할 수 없다. -->
         <!-- 로고, 내비 등 -->
