--- a/50_html/16_레이아웃.html
+++ b/50_html/16_레이아웃.html
@@ -10,7 +10,6 @@
 <body>
     <h1>레이아웃</h1>
     <!-- 
-        교재 67페이지 아래 이미지를 참고하여 
         1. div를 이용한 방식과 
         2. HTML의 시맨틱 태그를 이용한 방식으로
         레이아웃을 구현해 보세요.
@@ -18,14 +17,10 @@
         아래내용을 숙지한 후 지우고 반복 연습해 봅니다.
      -->
     <h2>HTML5 시맨틱 코딩</h2>
-    <div class="wrap">
-        <header>
-            헤더
-        </header>
-        <div class="container">
-            <nav>
-                내비게이션
-            </nav>
+     <div class="wrap">
+        <header>헤더</header>
+        <div class=""container>
+            <nav>네비게이션</nav>
             <section>
                 <h2>섹션</h2>
                 <article>
@@ -36,10 +31,8 @@
                 </article>
             </section>
         </div>
-        <footer>
-            푸터
-        </footer>
-    </div>
+        <footer>푸터</footer>
+     </div>
 
     <!-- id와 class의 값은 임의로 정함 -->
     <!-- 
@@ -52,13 +45,9 @@
     <!-- class속성은 중복 사용 가능 -->
     <h2>div 코딩</h2>
     <div class="wrap">
-        <div id="header">
-            헤더
-        </div>
-        <div class="container">
-            <div id="nav">
-                내비게이션
-            </div>
+        <div id="header">헤더</div>
+        <div class=""container>
+            <div id="nav">네비게이션</div>
             <div id="content">
                 <h2>섹션</h2>
                 <div class="article">
@@ -69,9 +58,8 @@
                 </div>
             </div>
         </div>
-        <div id="footer">
-            푸터
-        </div>
-    </div>
+        <div id="footer">푸터</div>
+     </div>
+    
 </body>
 </html>
