--- a/51_css/part1/02-2_자손,자식.html
+++ b/51_css/part1/02-2_자손,자식.html
@@ -8,12 +8,14 @@
         <title>HTML+CSS</title>
         <style>
             /* 
-                후손선택자
+                후손(자손, 자식+손자)선택자
                 선택자1 선택자2
                 선택자 사이는 공백으로 구분한다.
                 선택자1은 조상(부모포함)
                 선택자2는 자손(자식포함)
             */
+            /* .s1의 후손(자식+손자)인 p를 선택하여 글자색을 빨강으로 지정한다. */
+            .s1 p {color:red;}
 
 
             /* 
@@ -24,6 +26,8 @@
                 선택자2는 자식
             */
 
+            /* 선택자의 우선순위가 같으면 아래쪽에 기록한 것이 적용된다. */
+            .s1 > p {background-color:blue;}
             
         </style>
     </head>
