--- a/51_css/part1/02_요소,id,class.html
+++ b/51_css/part1/02_요소,id,class.html
@@ -9,7 +9,7 @@
         /* 
             선택자 {속성:값;}
             선택자 종류
-            1. 기본: id, alass, 태그, 전체, 그룹
+            1. 기본: id, class, 태그, 전체, 그룹
             2. 결합자: 후손, 자식
             3. 가상 클래스
             4. 가상 요소
@@ -19,6 +19,9 @@
         /* 
             우선순위:
             id > class > 요소
+            1. id
+            2. class, 가상 클래스, 속성
+            3. 요소(태그), 가상 요소
 
             id와 class의 이름 지정 방법
             1. 첫 글자는 영문자, _, - (숫자x)
@@ -33,6 +36,7 @@
         .p1 {color:blue;}
 
         /* 요소(타입, 태그) 선택자: 태그 이름으로 지정 */
+        /* body에 p 요소를 선택하여 글자 색을 빨강으로 지정한다. */
         p {color:red;}
     </style>
 </head>
