--- a/51_css/part2/20_boxModel.html
+++ b/51_css/part2/20_boxModel.html
@@ -7,7 +7,21 @@
     <title>HTML+CSS</title>
     <style>
 
+        /* 
+            박스 모델
+            1. width: 너비
+            2. height: 높이
+            3. border: 테두리
+            4. margin: 여백
+            5. padding: 패딩
+        */
+
         /* (1) .container 배경색은 red로, 가로 크기는 50%, 세로 크기는 1000px로 지정하시오. */
+        .container {
+            background-color: red;
+            width: 50%;
+            height: 1000px;
+        }
 
 
         /* (2) .container 자식 요소인 div의 배경색을 yellow로, 여백은 100px, 패딩은 20px, 테두리는 두께는 10px, 테두리 종류는 solid, 테두리 색은 black으로 지정하시오. */
@@ -39,6 +53,7 @@
     </style>
 </head>
 <body>
+    <!-- 모든 요소는 박스이다. -->
     <h1>박스 모델</h1>
     <div class="container">
         <div class="div1">박스1: 가로/세로 크기 모두 auto, 가로는 100%, 세로는 콘텐츠 크기</div>
