--- a/51_css/part2/20-1_box-sizing.html
+++ b/51_css/part2/20-1_box-sizing.html
@@ -24,12 +24,17 @@
             = 150 + 20*2 + 10*2 
         */
         /* (1) .div1의 box-sizing은 content-box로 지정하시오. */
-
+        .div1 {
+            box-sizing: content-box;
+        }
 
 
         /* width:500px; height:150px; */
         /* width와 height에 border와 padding 크기가 포함된다. */
         /* (2) .div2의 box-sizing은 border-box로 지정하시오. */
+        .div2 {
+            box-sizing: border-box;
+        }
 
 
 
