--- a/51_css/part2/21_margin.html
+++ b/51_css/part2/21_margin.html
@@ -13,23 +13,56 @@
             background:yellow;
         }
 
+        /* 
+            margin-top: 10px;
+            margin-right: 20px;
+            margin-bottom: 30px;
+            margin-left: 40px;
+
+            (속기형)
+            margin: 여백(테두리 바깥 여백);
+            margin: 10px;
+            margin: 상 우 하 좌;
+            margin: 10px 20px 30px 40px;
+            margin: 상 좌우 하;
+            margin: 10px 20px 30px;
+            margin: 상하 좌우;
+            margin: 10px 20px;
+        */
+
         /* (1) .m1의 상하좌우 여백을 각각 10px, 20px, 30px, 40px로 지정하시오. */
+        .m1 {
+            margin-top: 10px;
+            margin-bottom: 20px;
+            margin-left: 30px;  
+            margin-right: 40px;
+        }
 
-
-        /* (2) .m2의 상하좌우 여백을 각각 10px, 20px, 30px, 40px로 지정하시오. */
-
+        /* (2) .m2의 상하좌우 여백을 각각 10px, 20px, 30px, 40px로 지정하시오. (속기형)*/
+        .m2 {
+            margin: 10px 40px 20px 30px;
+        }
 
         /* (3) .m3의 여백을 위는 10px, 좌우는 20px, 아래는 30px으로 지정하시오. */
-
+        .m3 {
+            margin: 10px 20px 30px;
+        }
 
         /* (4) .m4의 여백을 상하는 10px, 좌우는 20px으로 지정하시오. */
-
+        .m4 {
+            margin: 10px 20px;
+        }
 
         /* (5) .m5의 여백을 상하좌우 모두 10px으로 지정하시오. */
-
+        .m5 {
+            margin: 10px;
+        }
         
         /* (6) .m6의 여백을 왼쪽은 230px, 위는 -160px으로 지정하시오. */
-
+        .m6 {
+            margin-left: 230px;
+            margin-top: -160px;
+        }
 
     </style>
 </head>
