--- a/51_css/part2/22-2_border-width.html
+++ b/51_css/part2/22-2_border-width.html
@@ -13,23 +13,33 @@
             border: solid;
         }
 
-        /* 얇은 */
+        /* 
+            border-width: 값1 값2 값3 값4;
+            border-style: 값1 값2 값3 값4;
+            border-color: 값1 값2 값3 값4;
+        */
 
+        /* 얇은(thin) */
+        .b1 {
+            border-width: thin;
+        }
 
-        /* 중간 */
+        /* 중간(medium, 기본값) */
+        .b2 {border-width: medium;}
 
-
-        /* 두꺼운 */
-
+        /* 두꺼운(thick) */
+        .b3 {border-width: thick;}
 
         /* 1px */
+        .b4 {border-width: 1px;}
 
-
-        /* 1em */
-
+        /* 1em, 엠 */
+        /* em은 글자 크기의 배수 */
+        /* 글자 크기의 기본값으 16px */
+        .b5 {border-width: 1em;}
 
         /* 16px */
-
+        .b6 {border-width: 16px;}
 
         /* (7) .b7에 선 굵기를 상하는 1px, 좌우는 3px로 지정하시오. */
 
