--- a/51_css/part2/22_border.html
+++ b/51_css/part2/22_border.html
@@ -12,25 +12,58 @@
             margin: 20px;
         }
         /* 
-            border:[두께] 스타일 [색];
+            border-top-width
+            border-top-style
+            border-top-color
+
+            (속기형)
+            border-top: 두께 스타일 색;
+            border-right: 두께 스타일 색;
+            border-bottom: 두께 스타일 색;
+            border-left: 두께 스타일 색;
+
+            border-width: 두께;
+            border-style: 스타일;
+            border-color: 색;
+
+            (속기형)
+            border:[두께] 스타일 [색]; //두께하고 색은 선택사항
             색을 생략하면 글자색
             글자색을 지정하지 않으면 검정
         */
 
         /* (1) .b1에 위쪽 테두리를 1px solid red로 지정하시오. */
+        .b1 {
+            border-top-width: 1px;
+            border-top-style: solid;
+            border-top-color: red;
 
+            border-top: 1px solid red;
+        }
 
         /* (2) .b2에 오른쪽 테두리를 1px solid red로 지정하시오. */
-
+        .b2 {
+            border-right: 1px solid red;
+        }
 
         /* (3) .b3에 아래쪽 테두리를 1px solid red로 지정하시오. */
-
+        .b3 {
+            border-bottom: 1px solid red;
+        }
 
         /* (4) .b4에 왼쪽 테두리를 1px solid red로 지정하시오. */
+        .b4 {
+            border-left-width: 1px;
+            border-left-style: solid;
+            border-left-color: red;
 
+            border-left: 1px solid red;
+        }
 
         /* (5) .b5에 테두리를 1px solid red로 지정하시오. */
-
+        .b5 { 
+            border: 1px solid red;
+        }
 
         
     </style>
