--- a/51_css/part2/21-1_padding.html
+++ b/51_css/part2/21-1_padding.html
@@ -13,20 +13,52 @@
             margin: 20px;
         }
 
-        /* (1) .p1의 상하좌우 패딩을 각각 10px, 20px, 30px, 40px로 지정하시오. */
+        /* 블록설정한 단어 선택하기: ctrl+d  */
+        /* 
+            padding-top: 10px;
+            padding-right: 20px;
+            padding-bottom: 30px;
+            padding-left: 40px;
 
+            (속기형)
+            padding: 패딩(테두리 안쪽 여백);
+            padding: 10px;
+            padding: 상 우 하 좌;
+            padding: 10px 20px 30px 40px;
+            padding: 상 좌우 하;
+            padding: 10px 20px 30px;
+            padding: 상하 좌우;
+            padding: 10px 20px;
+        */
+
+        /* (1) .p1의 상하좌우 패딩을 각각 10px, 20px, 30px, 40px로 지정하시오. */
+        /* 선택한 영역의 위/아래 위치 변경: alt + 위/아래 방향키 */
+        .p1 {
+            padding-top: 10px;
+            padding-right: 40px;
+            padding-bottom: 20px;
+            padding-left: 30px;
+        }
 
         /* (2) .p2의 상하좌우 패딩을 각각 10px, 20px, 30px, 40px로 지정하시오. */
-
+        .p2 {
+            padding: 10px 40px 20px 30px;
+        }
 
         /* (3) .p3의 패딩을 위는 10px, 좌우는 20px, 아래는 30px으로 지정하시오. */
-
+        .p3 {
+            padding: 10px 20px 30px;
+        }
 
         /* (4) .p4의 패딩을 상하는 10px, 좌우는 20px으로 지정하시오. */
-
+        .p4 {
+            padding: 10px 20px;
+        }
 
         /* (5) .p5의 패딩을 상하좌우 모두 10px으로 지정하시오. */
-
+        .p5 {
+            padding: 10px;
+        }
 
         /* 패딩은 음수 값을 지정할 수 없다. */
 
