--- a/51_css/part2/22-2_border-width.html
+++ b/51_css/part2/22-2_border-width.html
@@ -42,13 +42,22 @@
         .b6 {border-width: 16px;}
 
         /* (7) .b7에 선 굵기를 상하는 1px, 좌우는 3px로 지정하시오. */
-
+        .b7 {
+            border-width: 1px 3px;
+            border-style: solid dotted;
+        }
 
         /* (8) .b8에 선 굵기를 위는 1px 좌우는 3px, 아래는 5px로 지정하시오. */
-
+        .b8 {
+            border-width: 1px 3px 5px;
+            border-color: red green blue;
+        }
 
         /* (9) .b9에 선 굵기를 위는 1px 오른쪽은 3px, 아래는 5px, 왼쪽은 7px로 지정하시오. */
-
+        .b9 {
+            border-width: 1px 3px 5px 7px;
+            
+        }
 
     </style>
 </head>
@@ -58,7 +67,7 @@
     <div class="b1">thin</div>
     <div class="b2">medium</div>
     <div class="b3">thick</div>
-    <div class="b4">3px</div>
+    <div class="b4">1px</div>
     <div class="b5">1em</div>
     <div class="b6">16px</div>
     <div class="b7">1px 3px</div>
