--- a/51_css/part2/25_float.html
+++ b/51_css/part2/25_float.html
@@ -11,19 +11,41 @@
             height:150px;
         }
 
+        /* 
+            레이아웃(Layout, 배치)
+            1. float -> display: flex; -> 최근방식
+            2. position: 요소를 겹칠때, 움직임
+        */
+
+        /* 
+            블록레벨요소를 가로 배치 한다.
+            공중부양(부유)
+            float: left;
+            float: right;
+            float: none;
+
+            clear: left;
+            clear: right;
+            clear: both; -> left,rigth 둘다
+
+        */
+
         /* (1) .div1의 float를 left로 지정하시오. */
         .div1 {
+            float: left;
             background:lightblue;
             /* width의 기본값이 콘텐츠크기로 바뀐다. */
         }
 
         /* (2) .div2의 float를 right로 지정하시오. */
         .div2 {
+            float: right;
             background: lightcoral;
         }
 
         /* (3) .div3의 clear 속성을 both로 지정하시오. */
         .div3 {
+            clear: both;
             background: lightgoldenrodyellow;
             /* 상위 요소의 float 효과를 제거 */
         }
@@ -33,6 +55,8 @@
     <h1>플로트</h1>
     <div class="div1">박스1</div>
     <div class="div2">박스2</div>
-    <div class="div3">박스3</div>
+    <div class="div1">박스3</div>
+    <div class="div2">박스4</div>
+    <div class="div3">박스5</div>
 </body>
 </html>
