--- a/51_css/part2/22-3_border-radius.html
+++ b/51_css/part2/22-3_border-radius.html
@@ -13,33 +13,69 @@
             margin: 20px;
         }
 
+        /* 
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            border-bottom-left-radius: 10px;
 
-        /* (1) .br1에 상하좌우 모서리 둥근 정도를 10px로 지정하시오. */
 
+            (속기형)
+            border-radius: 10px;
+        */
 
-        /* (2) .br2에 상하좌우 모서리 둥근 정도를 10px로 지정하시오.(속기) */
+        /* (1) .br1에 모서리 둥근 정도를 10px로 지정하시오. */
+        .br1 {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
 
+        /* (2) .br2에 모서리 둥근 정도를 10px로 지정하시오.(속기) */
+        .br2 {border-radius: 10px;}
 
         /* (3) .br3의 모서리 둥근 정도를 왼쪽 상단은 10px, 오른쪽 상단 20px, 오른쪽 아래는 30px, 왼쪽 아래는 40px로 지정하시오. */
+        .br3 {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 30px;
+            border-bottom-left-radius: 40px;
+
+            border-radius: 10px 20px 30px 40px;
+        }
 
 
         /* (4) .br4의 모서리 둥근 정도를 왼쪽 상단은 10px, 오른쪽 상단과 왼쪽 아래를 20px, 오른쪽 아래는 30px으로 지정하시오. */
+        .br4 {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 20px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 30px;
+
+            border-radius: 10px 20px 30px
+        }
 
 
         /* (5) .br5의 모서리 둥근 정도를 왼쪽 상단과 오른쪽 하단은 10px, 오른쪽 상단과 왼쪽 아래는 20px로 지정하시오. */
-
+        .br5 {border-radius: 10px 20px;}
 
         /* (6) .br6의 모서리 둥근 정도를 75px로 지정하시오. */
-        
+        /* 모서리 둥근 정도가 width 또는 height 크기의 50% 이상이면 원이된다. */
+        .br6 {border-radius: 75px;}
+
         /* %는 자신의 가로 또는 세로 크기가 기준 */
         /* (7) .br7의 모서리 둥근 정도를 50%로 지정하시오. */
-
+        .br7 {border-radius: 50%;}
 
         /* (8) .br8의 모서리 둥근 정도를 왼쪽 상단과 왼쪽 하단을 75px로 지정하시오. */
         .br8 {
             width: 75px;
-        }
+            border-top-left-radius: 75px;
+            border-bottom-left-radius: 75px;
 
+            border-radius: 75px 0 0 75px;
+        }
         
     </style>
 </head>
