--- a/51_css/part2/23_box-shadow.html
+++ b/51_css/part2/23_box-shadow.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+
+        /* 
+            (CSS 형식)
+            선택자 {
+                속성: 값1 값2 값3 값4; 
+                속성: 값1. 값2, 값3, 값4; 
+                ...
+            }
+        */
+
         /* 
             텍스트 그림자: 
             text-shadow: 가로위치 세로위치 [흐림] [색], 가로위치 세로위치 [흐림] [색], ...;
@@ -27,21 +37,35 @@
         /* 그림자의 색을 지정하지 않으면 글자색이다. */
 
         /* (1) .bs1의 박스 그림자를 가로 위치 5px, 세로 위치 10px로 지정하시오. */
-
+        .bs1 {
+            color: red;
+            box-shadow: 5px 10px;
+        }
 
         /* (2) .bs2의 박스 그림자를 가로 위치 5px, 세로 위치 10px, 색상을 #888로 지정하시오. */
-
+        .bs2 {
+            box-shadow: 5px 10px #888;
+        }
 
         /* (3) .bs3의 박스 그림자를 가로 위치 5px, 세로 위치 10px, 흐림 정도를 8px, 색상을 #888로 지정하시오. */
-
+        .bs3 {
+            box-shadow: 5px 10px 8px #888;
+        }
 
         /* (4) .bs4의 박스 그림자를 가로 위치 5px, 세로 위치 10px, 흐림 정도를 8px, 퍼짐 정도를 10px, 색상을 #888로 지정하시오. */
-
+        .bs4 {
+            box-shadow: 5px 10px 8px 10px #888;
+        }
 
         /* (5) .bs5의 박스 그림자를 가로 위치 5px, 세로 위치 5px, 색상은 blue, 가로 위치는 10px, 세로 위치는 10px, 색상은 red로, 가로 위치는 15px, 세로 위치는 15px, 색상은 green으로 둘 이상의 그림자를 추가하시오. */
-
+        .bs5 {
+            box-shadow: 5px 5px blue, 10px 10px red, 15px 15px green;
+        }
 
         /* (6) .bs6의 박스 그림자를 가로 위치는 5px, 세로 위치는 5px, 흐림 정도를 5px, 색상은 #aaa, 내부 그림자로 지정하시오. */
+        .bs6 {
+            box-shadow: 5px 5px 5px #aaa inset;
+        }
 
     </style>
 </head>
