--- a/51_css/part2/24-1_display.html
+++ b/51_css/part2/24-1_display.html
@@ -9,6 +9,13 @@
     <style>
 
         /* .div와 .span을 각각 display는 inline-block로, 가로 크기는 150px, 세로 크기는 100px, 테두리는 1px solid red, 여백은 10px로 지정하시오. */
+        .div, .span {
+            display: inline-block;
+            width: 150px;
+            height: 100px;
+            border: 1px solid red;
+            margin: 10px;
+        }       
 
     </style>
 </head>
