--- a/51_css/part2/24_display.html
+++ b/51_css/part2/24_display.html
@@ -16,21 +16,54 @@
             height: auto;
         }
 
+        /* 
+            display: block;
+            display: list-item; -> <li> -> block과 같다.
+            display: table; -> <table> -> block과 같다.
+            display: table-cell; -> <th>, <td> -> block과 같다.
+            display: inline;
+            display: inline-block;
+            display: none; -> 화면 제거
+
+            값: block, inline, inline-block, none
+        */
 
         /* (1) .db에 가로 크기는 50%, 높이는 50px, 상하 여백은 10px, 패딩은 10px, 테두리는 1px solid red로 지정하시오. */
-
+        .db {
+            display: block;
+            width: 50%;
+            height: 50px;
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid red;
+        }
 
         /* (2) .di에 가로와 세로 크기는 1500px, 여백은 20px, 패딩은 10px, 테두리는 1px solid red로 지정하시오. */
-
+        .di {
+            display: inline;
+            width: 1500px;
+            height: 1500px;
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid red;
+        }
 
         /* (3) .dib에 가로는 150px, 세로 크기는 40px, 여백은 20px, 패딩은 10px, 테두리는 1px solid red로 지정하시오. */
-
+        .dib {
+            display: inline-block;
+            width: 150px;
+            height: 40px;
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid red;
+            box-sizing: border-box;
+        }
 
         /* (4) .dn을 display 속성을 사용하여 숨기시오. */
-
+        .dn {display: none;}
 
         /* (5) .vh을 visibility 속성을 사용하여 숨기시오. */
-
+        .vh {visibility: hidden;}
 
     </style>
 </head>
