--- a/51_css/part2/25-1_float.html
+++ b/51_css/part2/25-1_float.html
@@ -8,17 +8,24 @@
     <style>
 
         /* (1) 본문의 두 번째 p 요소와 세 번째 p 요소에 ::after 선택자를 사용하여 clear:both; 처리하시오. */
-
+        p::after {
+            content: '';
+            clear: both;
+            display: block;
+        }
 
 
         /* (2) 모든 p 요소에 overflow를 hidden 처리하시오. */
         p {
+            width: 100%;
+            height: auto;
             border: 1px solid red;
+            /* overflow: hidden; */
         }
 
 
         img {width:200px;}
-        .img1 {float:none;}
+        /* .img1 {float:none;} 쓰나 안쓰나 같음 */ 
         .img2 {float:left; margin-right: 10px;}
         .img3 {float:right; margin-left: 10px;}
     </style>
@@ -27,8 +34,8 @@
     <h1>이미지와 단락</h1>
     <hr>
     <p><img class="img1" src="../assets/20220511_1124.jpg" alt="집">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus eius aspernatur laboriosam velit. Temporibus architecto doloribus quidem? Similique consequuntur voluptatibus mollitia veritatis aliquam minima alias asperiores eaque, labore sapiente qui sint accusantium quam ipsam quasi voluptatem, eum architecto? Voluptatibus facere error rerum odio exercitationem minima ab animi labore sunt?</p>
-    <p><img class="img2" src="../assets/20225282447948.png" alt="집">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus eius aspernatur laboriosam velit. Temporibus architecto doloribus quidem? Similique consequuntur voluptatibus mollitia veritatis aliquam minima alias asperiores eaque, labore sapiente qui sint accusantium quam ipsam quasi voluptatem, eum architecto? Voluptatibus facere error rerum odio exercitationem minima ab animi labore sunt?</p>
+    <p><img class="img2" src="../assets/20220511_1124.jpg" alt="집">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus eius aspernatur laboriosam velit. Temporibus architecto doloribus quidem? Similique consequuntur voluptatibus mollitia veritatis aliquam minima alias asperiores eaque, labore sapiente qui sint accusantium quam ipsam quasi voluptatem, eum architecto? Voluptatibus facere error rerum odio exercitationem minima ab animi labore sunt?</p>
     
-    <p><img class="img3" src="../assets/20230121135497.jpg" alt="집">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus eius aspernatur laboriosam velit. Temporibus architecto doloribus quidem? Similique consequuntur voluptatibus mollitia veritatis aliquam minima alias asperiores eaque, labore sapiente qui sint accusantium quam ipsam quasi voluptatem, eum architecto? Voluptatibus facere error rerum odio exercitationem minima ab animi labore sunt?</p>
+    <p><img class="img3" src="../assets/20220511_1124.jpg" alt="집">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus eius aspernatur laboriosam velit. Temporibus architecto doloribus quidem? Similique consequuntur voluptatibus mollitia veritatis aliquam minima alias asperiores eaque, labore sapiente qui sint accusantium quam ipsam quasi voluptatem, eum architecto? Voluptatibus facere error rerum odio exercitationem minima ab animi labore sunt?</p>
 </body>
 </html>
