--- a/51_css/part2/25_float.html
+++ b/51_css/part2/25_float.html
@@ -37,6 +37,7 @@
             /* width의 기본값이 콘텐츠크기로 바뀐다. */
         }
 
+        /* 자식 요소가 float 되었을때 부모 요소의 높이를 갖도록 한다. */
         /* (2) .div2의 float를 right로 지정하시오. */
         .div2 {
             float: right;
