--- a/51_css/part2/25-1_float.html
+++ b/51_css/part2/25-1_float.html
@@ -8,6 +8,9 @@
     <style>
 
         /* (1) 본문의 두 번째 p 요소와 세 번째 p 요소에 ::after 선택자를 사용하여 clear:both; 처리하시오. */
+        /* 
+            자식 요소를 float 처리하면 부모 요소의 높이가 자식 요소의 높이 만큼 처리가 안됨.
+        */
         p::after {
             content: '';
             clear: both;
