--- a/51_css/part2/26_overflow.html
+++ b/51_css/part2/26_overflow.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+
+        /* 
+            자식 요소를 float 처리 했을 때 부모 높이의 크기를 자식 요소의 높이 만큼 지정 
+        */
         .container {
             background: red;
             overflow:hidden;
@@ -18,17 +22,24 @@
             background:yellow;
         }
 
+        /* 
+            overflow
+            overflow-x
+            overflow-y
+        */
+
         /* (1) .ovf1에 overflow 속성을 visible로 지정하시오. */
+        .ovf1 {overflow: visible;}
 
 
         /* (2) .ovf2에 overflow-y 속성을 scroll로 지정하시오. */
-
+        .ovf2 {overflow-y: scroll;}
 
         /* (3) .ovf3에 overflow 속성을 hidden으로 지정하시오. */
-
+        .ovf3 {overflow: hidden;}
 
         /* (4) .ovf4에 overflow 속성을 auto로 지정하시오. */
-
+        .ovf4 {overflow: auto;}
 
     </style>
 </head>
@@ -37,9 +48,9 @@
     <p>콘텐츠가 요소의 범위를 넘칠 경우 넘친 부분을 그대로 표시(visible)하거나, 숨기거나(hidden), 스크롤바(scroll, auto)를 나타낸다.</p>
     <div class="container">
         <div class="ovf1">visible: Lorem, ipsum dolor sit amet consectetur adipisicing elit. A molestias ipsam laudantium fuga odit enim at pariatur autem aspernatur exercitationem excepturi dignissimos nobis explicabo porro voluptate, rem itaque. Perferendis, ullam?</div>
-        <div class="ovf2">scroll: Lorem, ipsum dolor sit amet consectetur adipisicing elit. A molestias ipsam laudantium fuga odit enim at pariatur autem aspernatur exercitationem excepturi dignissimos nobis explicabo porro voluptate, rem itaque. Perferendis, ullam?</div>
+        <div class="ovf2">scroll: Lorem, ipsum dolor sit amet consectetur adipisicing elit. </div>
         <div class="ovf3">hidden: Lorem, ipsum dolor sit amet consectetur adipisicing elit. A molestias ipsam laudantium fuga odit enim at pariatur autem aspernatur exercitationem excepturi dignissimos nobis explicabo porro voluptate, rem itaque. Perferendis, ullam?</div>
-        <div class="ovf4">auto: Lorem, ipsum dolor sit amet consectetur adipisicing elit. A molestias ipsam laudantium fuga odit enim at pariatur autem aspernatur exercitationem excepturi dignissimos nobis explicabo porro voluptate, rem itaque. Perferendis, ullam?</div>
+        <div class="ovf4">auto: Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
     </div>
 </body>
 </html>
