--- a/51_css/part2/27-1_flex-direction.html
+++ b/51_css/part2/27-1_flex-direction.html
@@ -15,19 +15,20 @@
 
         .container {
             display: flex;
+            border: 1px solid red;
         }
 
         /* (1) .fldr에 방향을 row로 지정하시오. */
-
+        .fldr {flex-direction: row;}
 
         /* (2) .fldc에 방향을 column로 지정하시오. */
-
+        .fldc {flex-direction: column;}
 
         /* (3) .fldrr에 방향을 row-reverse로 지정하시오. */
-
+        .fldrr {flex-direction: row-reverse;}
 
         /* (4) .fldcr에 방향을 column-reverse로 지정하시오. */
-
+        .fldcr {flex-direction: column-reverse;}
 
     </style>
 </head>
