--- a/51_css/part2/27-5_align-items.html
+++ b/51_css/part2/27-5_align-items.html
@@ -26,19 +26,19 @@
         /* 플렉스 컨테이너 크기 만큼 늘어남. */
         /* 플렉스 아이템의 height를 지정하면 늘어나지 않고, flex-start로 지정된다. */
 
-
+        /* .ais {align-items: stretch;} 기본값*/
         
-        /* (1) .ais에 플렉스 아이템을 교차축의 시작에 정렬하기 위해 속성을 지정하시오. */
+        /* (1) .aifs에 플렉스 아이템을 교차축의 시작에 정렬하기 위해 속성을 지정하시오. */
+        .aifs {align-items: flex-start;}
 
+        /* (2) .aife에 플렉스 아이템을 교차축의 끝에 정렬하기 위해 속성을 지정하시오. */
+        .aife {align-items: flex-end;}
 
-        /* (2) .aifs에 플렉스 아이템을 교차축의 끝에 정렬하기 위해 속성을 지정하시오. */
+        /* (3) .aic에 플렉스 아이템을 교차축의 가운데 정렬하기 위해 속성을 지정하시오. */
+        .aic {align-items: center;}
 
-
-        /* (3) .aife에 플렉스 아이템을 교차축의 가운데 정렬하기 위해 속성을 지정하시오. */
-
-
-        /* (4) .aic에 플렉스 아이템을 텍스트 아래 기준선에 맞춰 정렬하기 위해 속성을 지정하시오. */
-
+        /* (4) .aib에 플렉스 아이템을 텍스트 아래 기준선에 맞춰 정렬하기 위해 속성을 지정하시오. */
+        .aib {align-items: baseline;}
 
 
 
