--- a/51_css/part2/27-7_align-self.html
+++ b/51_css/part2/27-7_align-self.html
@@ -30,16 +30,16 @@
         .ass {align-self: stretch;}
 
         /* (1) .asfs에 플렉스 아이템을 교차축의 시작에 정렬하기 위해 속성을 지정하시오. */
-
+        .asfs {align-self: flex-start;}
 
         /* (2) .asfe에 플렉스 아이템을 교차축의 끝에 정렬하기 위해 속성을 지정하시오. */
-
+        .asfe {align-self: flex-end;}
 
         /* (3) .asc에 플렉스 아이템을 교차축의 가운데 정렬하기 위해 속성을 지정하시오. */
-
+        .asc {align-self: center;}
 
         /* (4) .asb에 플렉스 아이템을 텍스트 아래 기준선에 맞춰 정렬하기 위해 속성을 지정하시오. */
-
+        .asb {align-self: baseline;}
 
         .asb1 {font-size: 3rem;}
         .asb2 {font-size: 1rem;}
