--- a/51_css/part2/27_flex.html
+++ b/51_css/part2/27_flex.html
@@ -21,7 +21,7 @@
                 1. display:flex;
                 2. flex-direction: 방향;
                 3. flex-wrap: 줄바꿈;
-                4. flex-flow: direction wrap
+                4. flex-flow: direction wrap (속기형)
                 5. justify-content: 주축 정렬
                 6. align-items: 교차축 정렬
                 7. align-content: 교차축 블록 방향 정렬 (2개의 라인)
@@ -38,7 +38,8 @@
 
         /* 부모 요소인 .container의 display를 flex로 적용해 보세요. */
         .container {
-            outline: 1px solid red;
+            display: flex;
+            border: 1px solid red;
         }
 
         .container div {
