--- a/51_css/part1/02-7_after,before.html
+++ b/51_css/part1/02-7_after,before.html
@@ -7,25 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        /* ::before ~ 시작 태그 바로 뒤에 내용 삽입 */
+        /* 선택자::before ~ 시작 태그 바로 뒤에 내용 삽입 */
         /* 특수문자 삽입: 한글 자음 + 한자키 */
 
         /* p 시작 태그 뒤에 ♥를 가상으로 삽입해 주세요. */
+        p::before {
+            content: '♥';
+        }
 
 
 
         /* ::after ~ 종료 태그 바로 앞에 내용 삽입 */
-        /* 이모티콘 삽입: 윈 + . 또는 윈 + ; */
+        /* 이모티콘(이모지) 삽입: 윈 + . 또는 윈 + ; */
 
         /* p 종료 태그 앞에 🎄를 가상으로 삽입해 주세요. */
-
+        p::after {
+            content: '🎃';
+        }
 
 
     </style>
 </head>
 
 <body>
-    <h1>의사 요소 선택자</h1>
+    <h1>가상(의사, 유사) 요소 선택자</h1>
     <h2>::after, ::before</h2>
     <p>내용</p>
 </body>
