--- a/51_css/part2/27-2_flex-wrap.html
+++ b/51_css/part2/27-2_flex-wrap.html
@@ -15,17 +15,17 @@
 
         .container {
             display: flex;
-            outline:1px solid red;
+            border: 1px solid blue;
         }
 
         /* (1) .flwnw에 줄바꿈 속성을 nowrap으로 지정하시오. */
-
+        .flwnw {flex-wrap: nowrap;}
         
-        /* (2) .flwnw에 줄바꿈 속성을 wrap으로 지정하시오. */
+        /* (2) .flww에 줄바꿈 속성을 wrap으로 지정하시오. */
+        .flww {flex-wrap: wrap;}
 
-
-        /* (3) .flwnw에 줄바꿈 속성을 wrap-reverse으로 지정하시오. */
-
+        /* (3) .flwwr에 줄바꿈 속성을 wrap-reverse으로 지정하시오. */
+        .flwwr {flex-wrap: wrap-reverse;}
 
     </style>
 </head>
