--- a/51_css/part2/27-4_justify-content.html
+++ b/51_css/part2/27-4_justify-content.html
@@ -22,22 +22,22 @@
         }
 
         /* (1) .jcs에 플렉스 아이템을 주축의 시작에 배치하기 위해 속성을 지정하시오. */
-
+        .jcs {justify-content: flex-start;}
 
         /* (2) .jce에 플렉스 아이템을 주축의 끝에 배치하기 위해 속성을 지정하시오. */
-
+        .jce {justify-content: flex-end;}
 
         /* (3) .jcc에 플렉스 아이템을 주축의 가운데 배치하기 위해 속성을 지정하시오. */
-
+        .jcc {justify-content: center;}
 
         /* (4) .jcsb에 플렉스 아이템을 주축의 양쪽 끝에 배치하고 나머지 공간을 균등 분배하기 위해 속성을 지정하시오. */
-
+        .jcsb {justify-content: space-between;}
 
         /* (5) .jcsa에 플렉스 아이템의 좌우 공간을 모두 동일하게 하기 위해 속성을 지정하시오. */
-
+        .jcsa {justify-content: space-around;}
 
         /* (6) .jcse에 플렉스 아이템의 크기를 제외한 공간을 모두 동일하게 하기 위해 속성을 지정하시오. */
-
+        .jcse {justify-content: space-evenly;}
 
         
         /* 주축을 세로로 */
